@@ -3,9 +3,10 @@ package com.Momongt.Momongt_MomentRoute.config;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.security.web.SecurityFilterChain;
+
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -16,10 +17,12 @@ import java.util.Arrays;
 public class SecurityConfig {
 
     @Bean
+    @SuppressWarnings("Convert2MethodRef")
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+
         http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // CORS 설정
-                .csrf(csrf -> csrf.disable()) // CSRF 비활성화
+                .csrf(csrf -> csrf.disable()) // POST/PUT 요청 테스트용으로 CSRF 비활성화
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // CORS 활성화
                 .authorizeHttpRequests(auth -> auth
                         // Swagger 관련 경로 허용
                         .requestMatchers(
@@ -30,38 +33,55 @@ public class SecurityConfig {
                                 "/swagger-resources/**",
                                 "/webjars/**"
                         ).permitAll()
-                        .requestMatchers("/**").permitAll() // 개발용: 모든 요청 허용
+                        .requestMatchers("/**").permitAll() // 모든 요청 허용
                 )
-                .formLogin(form -> form.disable()) // 로그인 폼 비활성화
-                .httpBasic(httpBasic -> httpBasic.disable()); // Basic 인증 비활성화
+                .formLogin(formLogin -> formLogin.disable()) // 로그인 폼 사용 안 함
+                .httpBasic(httpBasic -> httpBasic.disable()); // Basic 인증 끔
 
         return http.build();
-    }
-
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // 허용할 출처 지정 (개발용과 배포용)
-        configuration.setAllowedOriginPatterns(Arrays.asList(
-                "http://localhost:*",
-                "momongt.cukeng.kr",
-                "https://*.vercel.app"
+        // 허용할 Origin 설정
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:5173",        // Vite React 개발 서버
+                "http://localhost:3000",        // React 기본 포트
+                "http://172.30.1.31:5173",     // 네트워크로 접근하는 Vite
+                "http://172.30.1.31:3000"      // 네트워크로 접근하는 React
         ));
 
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        // 허용할 HTTP 메서드
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
+        ));
+
+        // 허용할 헤더
+        configuration.setAllowedHeaders(java.util.List.of("*"));
+
+        // 인증 정보 포함 허용 (쿠키, Authorization 헤더 등)
         configuration.setAllowCredentials(true);
+
+        // preflight 요청 캐시 시간 (초)
         configuration.setMaxAge(3600L);
+
+        // 노출할 헤더
+        configuration.setExposedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type"
+        ));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+
         return source;
+    }
+
+    // 비밀번호 암호화를 위해 PasswordEncoder Bean 등록
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
     }
 }
